Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-498

Compact and Binary native protocols, used at the same time, can cause some issues

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Critical
    • Resolution: Fixed
    • 0.1
    • 0.2
    • Ruby - Library
    • None
    • Patch Available

    Description

      It seems like there is some scenario in which the native protocol method tables get mixed up when you are using both binary and compact protocol's native implementations. In the cases I've seen, this leads to a segfault in compact protocol when it can't find some ivar it needs. However, there's no telling for certain if it does not also silently corrupt the data being written as binary protocol at the same time.

      I will post a script that produces this exception soon.

      Attachments

        1. thrift-498.patch
          6 kB
          Bryan Duxbury

        Activity

          People

            bryanduxbury Bryan Duxbury
            bryanduxbury Bryan Duxbury
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: