THRIFT-498. rb: Compact and Binary native protocols, used at the same time, can cause some issues

Disable native method table usage.



git-svn-id: https://svn.apache.org/repos/asf/incubator/thrift/trunk@799693 13f79535-47bb-0310-9956-ffa450edef68